<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pastillasCreator.pill_box.actividades.MainActivity"
    android:background="@color/Homepage1">


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:itemBackground="@color/design_default_color_primary"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:menu="@menu/menu_navigation" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="125dp"
        android:layout_marginTop="80dp"
        android:text="@string/title"
        android:textColor="@color/Blanco1"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:layout_width="268dp"
        android:layout_height="267dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="156dp"
        android:layout_marginEnd="83dp"
        android:src="@drawable/pill2"
        android:contentDescription="@string/big_pill" />


    <ImageView
        android:layout_width="126dp"
        android:layout_height="96dp"
        android:layout_above="@+id/bottom_navigation"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="262dp"
        android:layout_marginBottom="30dp"
        android:src="@drawable/pill3"
        android:contentDescription="@string/unique_blue_pill" />


    <ImageView
        android:layout_width="126dp"
        android:layout_height="96dp"
        android:layout_above="@+id/bottom_navigation"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="27dp"
        android:src="@drawable/pill4"
        android:contentDescription="@string/multiple_pills" />

    <TextView
        android:layout_width="315dp"
        android:layout_height="94dp"
        android:layout_above="@+id/bottom_navigation"
        android:layout_alignParentStart="true"
        android:layout_marginStart="65dp"
        android:layout_marginTop="400dp"
        android:layout_marginBottom="160dp"
        android:text="@string/no_forget"
        android:textColor="@color/Blanco1"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="53dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="255dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="665dp"
        android:background="#625A83"
        android:text="CambiarTema"
        android:textColor="#FFFFFF"
        android:textSize="16sp" />


</RelativeLayout>